--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,12 +1,14 @@
 footer.mt-auto.py-3.bg-light
   .container.d-flex.justify-content-between
-    span © 2022 Company, Inc. All Rights Reserved
+    span © 2022 h3ll0w0rld
     ul.mb-0
+      //li.list-inline-item
+      //  a(href='https://github.com/sahat/hackathon-starter') GitHub Project
+      //li.list-inline-item
+      //  a(href='https://github.com/sahat/hackathon-starter/issues') Issues
+      //li.list-inline-item
+      //  a(href='/privacy-policy.html') Privacy Policy
+      //li.list-inline-item
+      //  a(href='/terms-of-use.html') Terms of Use
       li.list-inline-item
-        a(href='https://github.com/sahat/hackathon-starter') GitHub Project
-      li.list-inline-item
-        a(href='https://github.com/sahat/hackathon-starter/issues') Issues
-      li.list-inline-item
-        a(href='/privacy-policy.html') Privacy Policy
-      li.list-inline-item
-        a(href='/terms-of-use.html') Terms of Use
+        a(href='/') Home
